ocp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oliver-app
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"jonas-lernia-app:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"jonas-lernia-app\")].image"}]'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oliver-app
  template:
    metadata:
      labels:
        app: oliver-app
    spec:
      containers:
      - name: oliver-lernia-app
        image: jonas-lernia-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
