ocp/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oliver-lernia-app
spec:
  host: oliver-lernia-app.apps.cluster5.karoshi.se
  port:
    targetPort: 8080
  to:
    kind: Service
    name: oliver-lernia-app
    weight: 100
  wildcardPolicy: None
